--- a/PwArtGirls/PwArtGirls.vbproj
+++ b/PwArtGirls/PwArtGirls.vbproj
@@ -143,7 +143,6 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
-    <Content Include="Facturas.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -174,6 +173,7 @@
     <Content Include="Imagenes\Calzado3.jpg" />
     <Content Include="Imagenes\Calzado4.jpg" />
     <Content Include="Imagenes\Calzado5.jpg" />
+    <Content Include="Imagenes\Imagen1.jpg" />
     <Content Include="Imagenes\Jeans.jpg" />
     <Content Include="Imagenes\Jeans1.jpg" />
     <Content Include="Imagenes\Jeans2.jpg" />
@@ -182,6 +182,7 @@
     <Content Include="Imagenes\Jeans5.jpg" />
     <Content Include="Imagenes\Jeans6.jpg" />
     <Content Include="Imagenes\Jeans7.jpg" />
+    <Content Include="Imagenes\Logo.jpg" />
     <Content Include="Imagenes\Vestido1.jpg" />
     <Content Include="Imagenes\Vestido2.jpg" />
     <Content Include="Imagenes\Vestido3.jpg" />
@@ -190,6 +191,7 @@
     <Content Include="Imagenes\Vestido6.jpg" />
     <Content Include="Imagenes\Vestido7.jpg" />
     <Content Include="Imagenes\Vestidos.jpg" />
+    <Content Include="InicioPagina.aspx" />
     <Content Include="InicioSesion.aspx" />
     <Content Include="Jeans.aspx" />
     <Content Include="Registrarse.aspx" />
@@ -221,6 +223,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="estilos.css" />
     <Content Include="Vestidos.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -277,15 +280,15 @@
     <Compile Include="Default.aspx.designer.vb">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Facturas.aspx.designer.vb">
-      <DependentUpon>Facturas.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Facturas.aspx.vb">
-      <DependentUpon>Facturas.aspx</DependentUpon>
-      <SubType>ASPXCodebehind</SubType>
-    </Compile>
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="InicioPagina.aspx.designer.vb">
+      <DependentUpon>InicioPagina.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InicioPagina.aspx.vb">
+      <DependentUpon>InicioPagina.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="InicioSesion.aspx.designer.vb">
       <DependentUpon>InicioSesion.aspx</DependentUpon>
